--- a/style.css
+++ b/style.css
@@ -29,8 +29,11 @@ h3{
 .header{
     position: relative;
     min-height: 100vh;
-    background: cornflowerblue;
-    background: linear-gradient(225deg, #0044ff, #00b5ff);
+    background: rgb(0,125,255);
+    background: -moz-linear-gradient(225deg, rgba(0,0,255,1) 0%, rgba(0,255,255,1) 100%);
+    background: -webkit-linear-gradient(225deg, rgba(0,0,255,1) 0%, rgba(0,255,255,1) 100%);
+    background: linear-gradient(225deg, rgba(0,0,255,1) 0%, rgba(0,255,255,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0000ff",endColorstr="#00ffff",GradientType=1);
     background-size: 400% 400%;
     -webkit-animation: BGhead 14s ease infinite;
     -moz-animation: BGhead 14s ease infinite;
