--- a/index.css
+++ b/index.css
@@ -96,9 +96,15 @@ h3{
     -ms-animation: fadeIn ease 3s;
 }
 
+.courses{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
 .area{
     position: relative;
-    min-height: 50vh;
+    overflow: hidden;
+    min-height: 100vh;
     background: rgb(0,125,255);
     background-position: center;
     background-repeat: no-repeat;
@@ -108,7 +114,12 @@ h3{
     align-items: center;
 }
 
-.area a{
+.area:hover{
+    cursor: pointer;
+}
+
+.area h2{
+    position: absolute;
     color: #fff;
     text-decoration: none;
     font-style: normal;
@@ -116,8 +127,17 @@ h3{
     transition: 0.3s;
 }
 
-.area a:hover{
-    transform: scale(1.2) rotateZ(5deg);
+.area:hover .bg{
+    transform: scale(1.2);
+}
+
+.bg{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transition: all 0.7s;
 }
 
 #html{
@@ -126,6 +146,14 @@ h3{
 
 #css{
     background-image: url(purple.jpg);
+}
+
+#php{
+    background-image: url(green.jpg);
+}
+
+#js{
+    background-image: url(yellow.jpg);
 }
 
 footer{
@@ -227,6 +255,14 @@ footer p{
         margin-top: 10px;
         padding: 10px 20px;
         font-size: 16px;
+    }
+
+    .courses{
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .area{
+        min-height: 50vh;
     }
 
     .area a{
