--- a/index.css
+++ b/index.css
@@ -98,7 +98,7 @@ h3{
 
 .courses{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .area{
@@ -118,13 +118,23 @@ h3{
     cursor: pointer;
 }
 
-.area a{
+.area .content{
     position: absolute;
+}
+
+.area .content h2{
     color: #fff;
     text-decoration: none;
+    text-align: center;
     font-style: normal;
     font-size: 3em;
     transition: 0.3s;
+}
+
+.area .content p{
+    color: #fff;
+    text-align: center;
+    font-size: 1em;
 }
 
 .area:hover .bg{
@@ -259,6 +269,14 @@ footer p{
 
     .courses{
         grid-template-columns: 1fr 1fr;
+    }
+
+    .js-area{
+        grid-column: 1 / 3;
+    }
+
+    #js{
+        background-image: url(yellow2.jpg);
     }
 
     .area{
