--- a/index.css
+++ b/index.css
@@ -282,10 +282,6 @@ footer p{
     .area{
         min-height: 50vh;
     }
-
-    .area a{
-        font-size: 1.5em;
-    }
 }
 
 @media (max-width: 600px){
@@ -295,5 +291,21 @@ footer p{
 
     section{
         padding: 100px 20px;
+    }
+
+    .courses{
+        grid-template-columns: 1fr;
+    }
+
+    .js-area{
+        grid-column: 1 / 2;
+    }
+
+    #js{
+        background-image: url(yellow.jpg);
+    }
+
+    .area{
+        min-height: 40vh;
     }
 }
