--- a/index.css
+++ b/index.css
@@ -195,7 +195,7 @@ footer p{
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
 }
 
 /* Modal Content */
@@ -205,6 +205,7 @@ footer p{
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    max-width: 400px;
 }
 
 /* The Close Button */
