--- a/index.css
+++ b/index.css
@@ -231,6 +231,7 @@ form{
 
 input{
     width: 100%;
+    height: 30px;
     outline: none;
     border: none;
     border: 1px solid #aaaaaa;
@@ -244,11 +245,11 @@ input:hover, input:focus{
 
 form button{
     width: 100%;
+    height: 30px;
     outline: none;
     border: none;
     border: 1px solid #aaaaaa;  
     background-color: #aaaaaa;
-    padding-left: 5px;
     transition: 0.3s;
 }
 
