--- a/index.css
+++ b/index.css
@@ -205,7 +205,7 @@ footer p{
     padding: 20px;
     border: 2px solid #0082ff;
     max-width: 400px;
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 
 /* The Close Button */
@@ -235,6 +235,8 @@ input{
     border: none;
     border: 1px solid #aaaaaa;
     padding-left: 5px;
+    margin-bottom: 20px;
+    margin-top: 20px;
     transition: 0.3s;
 }
 
